# firebase-auth-proxy

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-test.yml
src/firebase_auth/: main.py
src/firebase_auth/core/: config.py  logging.py  models.py
src/firebase_auth/routes/: __init__.py  auth.py
src/firebase_auth/routes/dto/: __init__.py  types.py
src/firebase_auth/services/: auth_service.py  firebase_validator.py  user_context.py
tests/: conftest.py
tests/integration/: test_auth_api.py
tests/unit/: test_auth_service.py
